# agent-vision-team

./: .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  COLLABORATIVE_INTELLIGENCE_VISION.md  COMPLETE.md  DOGFOOD-CHECKLIST.md  PROJECT_STORY.md  README.md  RUNBOOK.md  docker-compose.yml  package-lock.json  package.json  ruff.toml  start-servers.sh  validate.sh
.avt/: README.md  api-key.txt  bootstrap-report.md  bootstrap-rules-draft.json  governance.db.pre-bootstrap  hook-holistic.log.pre-bootstrap  knowledge-graph.jsonl  project-config.json  session-state.md  trust-engine.db.pre-bootstrap
.claude/: PHASE3-STATUS.md  VALIDATION.md  mcp.json  settings.json
.devcontainer/: devcontainer.json
.husky/: pre-push
docs/: arch-v2-sections-01-03.md  arch-v2-sections-04-06.md  arch-v2-sections-07-08.md  arch-v2-sections-09-11.md  arch-v2-sections-12-15.md  arch-v2-sections-16-18.md  arch-v2-toc.md  architecture-verification-report.md  avt-feasibility-analysis.md  completion-plan.md  gap-analysis-report.md  medium-article-part2-draft.md  project-overview.md
e2e/: README.md  pyproject.toml  run-e2e.py  run-e2e.sh
e2e/generator/: __init__.py  domain_templates.py  project_generator.py
e2e/parallel/: executor.py
e2e/scenarios/: base.py  s01_kg_tier_protection.py  s02_governance_decision_flow.py  s03_governed_task_lifecycle.py  s04_vision_violation.py  s05_architecture_deviation.py  s06_quality_gates.py  s07_trust_engine.py  s08_multi_blocker_task.py  s09_scope_change_detection.py  s10_completion_guard.py  s11_hook_based_governance.py  s12_cross_server_integration.py  s13_hook_pipeline_at_scale.py  s14_architecture_metadata.py  s14_persistence_lifecycle.py  s15_ingestion_with_metadata.py  s16_evolution_proposal_lifecycle.py  s17_cascading_alignment.py  s18_extended_coverage.py
e2e/validation/: assertion_engine.py  report_generator.py
extension/: .eslintrc.json  .vscodeignore  README.md  TESTING.md  VSCODE-TESTING.md  esbuild.config.js  package-lock.json  package.json  tsconfig.json
mcp-servers/governance/: .coverage  README.md  pyproject.toml
mcp-servers/governance/.claude/collab/: knowledge-graph.jsonl
mcp-servers/governance/collab_governance/: __init__.py  evidence_validator.py  kg_client.py  models.py  reviewer.py  server.py  session_state.py  store.py  surreal_kg_client.py  surreal_store.py  task_integration.py
mcp-servers/governance/tests/: test_surreal_governance_store.py
mcp-servers/governance/tests_surreal/: test_surreal_governance_store.py
mcp-servers/knowledge-graph/: .coverage  README.md  pyproject.toml
mcp-servers/knowledge-graph/.claude/collab/: knowledge-graph.jsonl
mcp-servers/knowledge-graph/collab_kg/: __init__.py  archival.py  curation.py  graph.py  ingestion.py  metadata.py  models.py  server.py  storage.py  surreal_graph.py  tier_protection.py
mcp-servers/knowledge-graph/tests/: test_coverage.py  test_server.py  test_surreal_graph.py
mcp-servers/quality/: .coverage  README.md  pyproject.toml
mcp-servers/quality/collab_quality/: __init__.py  config.py  gates.py  models.py  server.py  storage.py  surreal_trust_engine.py  test_surreal_trust_engine.py  trust_engine.py
mcp-servers/quality/collab_quality/tools/: coverage.py  formatting.py  linting.py  testing.py
mcp-servers/quality/tests/: test_coverage.py  test_server.py
prompts/: claude-code-feature-intelligence-search.md
server/: Dockerfile  entrypoint.sh  nginx.conf  pyproject.toml
server/.avt/: api-key.txt
server/avt_gateway/: __init__.py  app.py  app_state.py  auth.py  config.py  deps.py
server/avt_gateway/models/: __init__.py  dashboard.py  jobs.py  project.py
server/avt_gateway/routers/: __init__.py  bootstrap.py  config_router.py  dashboard.py  documents.py  governance.py  health.py  jobs.py  projects.py  quality.py  research.py
server/avt_gateway/services/: __init__.py  claude_cli.py  file_service.py  job_runner.py  mcp_client.py  project_config.py  project_manager.py
server/avt_gateway/ws/: __init__.py  manager.py
server/static/: index.html
server/static/assets/: index.7toKofi-.js  index.BEXYNXb5.css  index.CqkIkhX5.css  index.D1W3B8-V.css  index.D9yj4edF.js  index.DH2CihxD.js  index.DoqD0iKb.js  index.d67JjK5o.js
shared/: pyproject.toml
shared/avt_db/: README.md  __init__.py  connection.py  context_search.py  embeddings.py  migration.py  schema.py  vectors.py
shared/avt_db/tests/: test_foundation.py  test_vector_search.py
(+288 files in other folders)
