[project]
name = "avt-e2e"
version = "0.1.0"
description = "End-to-end testing harness for the Collaborative Intelligence System"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator", "scenarios", "parallel", "validation"]
