[project]
name = "avt-db"
version = "0.1.0"
description = "Shared SurrealDB persistence layer for Agent Vision Team"
requires-python = ">=3.12"
dependencies = [
    "surrealdb>=1.0.0",
]

[project.optional-dependencies]
vectors = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["avt_db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
