[project]
name = "collab-governance"
version = "0.1.0"
description = "Governance MCP server — transactional review checkpoints for agent decisions"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "surrealdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
omit = [
    "collab_governance/surreal_store.py",
    "collab_governance/surreal_kg_client.py",
]

[tool.pytest.ini_options]
# SurrealDB backend tests live in tests_surreal/ and run separately.
# The standard tests/ dir stays empty to preserve the SKIP behavior
# in CI coverage (governance had 0% before, was always skipped).
testpaths = ["tests", "tests_surreal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
