[project]
name = "collab-quality"
version = "0.1.0"
description = "Quality MCP server — unified quality tool interface with trust engine"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "surrealdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
omit = [
    "collab_quality/surreal_trust_engine.py",
    "collab_quality/test_surreal_trust_engine.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
